--- a/mobile/package.json
+++ b/mobile/package.json
@@ -22,6 +22,7 @@
     "react-native": "https://github.com/expo/react-native/archive/sdk-39.0.3.tar.gz",
     "react-native-gesture-handler": "^1.8.0",
     "react-native-maps": "0.27.1",
+    "react-native-onboarding-swiper": "^1.1.4",
     "react-native-reanimated": "^1.13.1",
     "react-native-safe-area-context": "^3.1.8",
     "react-native-screens": "^2.11.0",
@@ -34,6 +35,7 @@
     "@types/react": "~16.9.35",
     "@types/react-dom": "~16.9.8",
     "@types/react-native": "~0.63.2",
+    "@types/react-native-onboarding-swiper": "^1.1.0",
     "typescript": "~3.9.5"
   },
   "private": true
